# ProgrammingC

./: 3labprog.docx  README.md  file1.txt  file2.txt  hello.c  mergesort.py  sort.c
laba6/: lab64.c
lb1/: 1.c
lb10/: 10l.c  10lf.c  makefile  structh.h
lb11/: 11_1.c  2.c  3.c  4.c
lb12/task0/: Makefile  MyProject
lb12/task1/: CMakeLists.txt
lb12/task1/background/: CMakeLists.txt
lb12/task1/pipes/: CMakeLists.txt
lb2/: earth.c  m.c  temp.c
lb3/: 10.c  11.c  12.c  13.c  14.c  15.c
lb4/: v.c
lb5/: b1.c  b2.c
lb6/: 4╤Б.c
lb7/: laba7.c
lb8/: upgrade.c
lb9/: 9l.c
sem2/: 1lab.c  1labprog.c  2labprog.c  4lab.c  4labtxt.txt  5lab.c  7lab.py  Lab22.c
sem2/rgz/: CMakeLists.txt  main.c  test_triangle.c  tests.c  triangle.c  triangle.h  validation.c  validation.h
sem2/threads/: laba7.c  thread_create.c  thread_modified.c  thread_options.c  thread_sleepsort.c  thread_termination.c  thread_termination_processing.c
